# papyrus

./: .env.example  .gitignore  README.md  STYLE.md  WORLD.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  必读.md
.github/workflows/: desktop-ci.yml  desktop-packages.yml  desktop-release.yml
apps/browser-bridge/: README.md  content_script.js  manifest.json  popup.html  popup.js  service_worker.js  vitest.config.ts
apps/wps-word-addin/: taskpane.html  tsconfig.json  vite.config.ts
docs/: AGENT_ARCHITECTURE.md  AGENT_MEMORY.md  BROWSER_BRIDGE.md  DESIGN.md  FEATURES.md  PAPYRUS_0.1.2_FEATURES.md  PAPYRUS_0.1.2_TEST_REPORT.md  PAPYRUS_WORK_ASSISTANT_TEST_REPORT.md  REMOTE_RELAY.md  ROADMAP.md  SECURITY_PUBLICATION.md  WPS_ADDIN.md
docs/testing/: WORK_ASSISTANT_PLATFORM_MATRIX.md  WORK_ASSISTANT_TEST_RECORD_TEMPLATE.md
os-integration/debian13/: README.md  SHA256SUMS  install-papyrus.sh  papyrus.desktop
scripts/: activate-portable-tools.ps1  browser-bridge.test.mjs  build-browser-bridge.mjs  build-papyrus-update-manifest.mjs  check-papyrus-release.ps1  check-work-assistant-release.mjs  deepseek-smoke-test.mjs  package-browser-bridge.mjs  package-wps-addin-release.ps1  prepare-wps-addin-dist.ps1  read-wps-addin-debug.ps1  run-cargo-desktop.mjs  smoke-tauri-bundle.mjs  smoke-tauri-bundle.test.mjs  sync-wps-addin.ps1  with-portable-msvc.ps1
scripts/lib/: release-checks.mjs  release-checks.test.mjs
skills/papyrus-copyediting-final-pass/: SKILL.md
skills/papyrus-literary-drafting/: SKILL.md
skills/papyrus-research-and-critique/: SKILL.md
skills/papyrus-structure-room/: SKILL.md
skills/papyrus-style-continuity/: SKILL.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ci/: linux.json  macos.json
src-tauri/icons/: icon.icns
src-tauri/keys/: README.md  papyrus-updater.key.pub
src-tauri/src/: lib.rs  main.rs  secretary_ledger.rs  update_protection.rs
src-tauri/src/work_assistant/: audit.rs  browser_bridge.rs  desktop.rs  doctor.rs  file_ops.rs  mod.rs  path_policy.rs  preview.rs  registry.rs  types.rs  workspace.rs
src-tauri/src/work_assistant/platform/: desktop.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AgentTraceRenderer.tsx  AppShell.tsx  BrandMark.tsx  BrowserBridgeSettings.test.tsx  BrowserBridgeSettings.tsx  ComputerAssistantSettings.test.tsx  ComputerAssistantSettings.tsx  EditorPane.tsx  FlowWorkspace.tsx  LeftSidebar.tsx  (+33 more)
(+145 files in other folders)
