[package]
name = "papyrus"
version = "0.1.2"
description = "Papyrus AI writing workstation"
authors = ["Scallion"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "papyrus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.23"
urlencoding = "2"
sha2 = "0.10"
uuid = { version = "=1.20.0", features = ["v4", "serde"] }
dunce = "1"
trash = "=5.2.3"
sysinfo = { version = "0.33", default-features = false }
open = "5"
